--- a/register.html
+++ b/register.html
@@ -161,7 +161,7 @@ body.darkmode button{
     </header>
 
     <div class="container">
-        <h1>Car Rental Registration Form</h1>
+        <h1>Registration Form</h1>
         <form>
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name"  placeholder="Your Full Name"required >
